@@ -9,6 +9,8 @@ mesa (13.0.2-2) UNRELEASED; urgency=medium
   * Stop passing --disable-silent-rules to configure, debhelper does
     that for a while.
   * Drop no longer needed dpkg-dev versioned build-dependency.
+  * Drop redundant cross-build detection, debhelper does this for us
+    already.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Dec 2016 12:36:12 +0100
 
